fix(table): thead and tbody missed alignment inheritance

--- a/src/definitions/collections/table.less
+++ b/src/definitions/collections/table.less
@@ -42,6 +42,11 @@
 .ui.table:last-child {
   margin-bottom: 0em;
 }
+.ui.table thead,
+.ui.table tbody {
+  text-align: inherit;
+  vertical-align: inherit;
+}
 
 /*******************************
              Parts
